# 1brc

./: .gitignore  Cargo.toml  README.md
src/: affinity.rs  branching_minmax.rs  branchless_measurement.rs  bytes.rs  combined_multi_thread.rs  compliant.rs  compliant_multi_thread.rs  faster_hash_map.rs  final_multi_thread.rs  final_single_thread.rs  find_phf.rs  gperf.rs  ilp.rs  lut_parsing.rs  main.rs  mutex_hashmap.rs  my_hashmap.rs  my_hashmap2.rs  my_phf.rs  naive.rs  no_store.rs  prefetch.rs  private_hashmaps.rs  simd_eq.rs  station_name_slice.rs  station_names.rs  use_avx512.rs  use_custom_hashmap.rs  use_dashmap.rs  use_memchr.rs  use_mmap.rs  use_phf.rs  use_rayon.rs  use_simd.rs
